--- a/session13.ipynb
+++ b/session13.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "'RegularPoly(4, 4)'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,8 @@
       " radius = 4,                  \n",
       " interior angle = 114.59155902616465, \n",
       " edge length = 5.656854249492381,                  \n",
-      " apothem = 114.59155902616465, \n",
-      " area = 1296.455495266233, \n",
+      " apothem = 2.8284271247461903, \n",
+      " area = 32.00000000000001, \n",
       " perimeter = 22.627416997969522\n"
      ]
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +139,8 @@
       " radius = 3,                  \n",
       " interior angle = 57.29577951308232, \n",
       " edge length = 5.196152422706632,                  \n",
-      " apothem = 57.29577951308232, \n",
-      " area = 446.5764052916516, \n",
+      " apothem = 1.5000000000000004, \n",
+      " area = 11.691342951089926, \n",
       " perimeter = 15.588457268119896\n"
      ]
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,6 +270,196 @@
     "> 1. functions as a sequence type (\\_\\_getitem__)\n",
     "> 2. supports the len() function (\\_\\_len__)\n",
     "> 3. has a proper representation (\\_\\_repr__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the object for RegularPolySeq class ( Number of verticies = 25 and radius = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poly_25 = ps.RegularPolySeq(25,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(RegularPoly(3, 3), 0.7500000000000002),\n",
+       " (RegularPoly(4, 3), 1.0606601717798214),\n",
+       " (RegularPoly(5, 3), 1.2135254915624212),\n",
+       " (RegularPoly(6, 3), 1.299038105676658),\n",
+       " (RegularPoly(7, 3), 1.3514533018536288),\n",
+       " (RegularPoly(8, 3), 1.38581929876693),\n",
+       " (RegularPoly(9, 3), 1.4095389311788626),\n",
+       " (RegularPoly(10, 3), 1.4265847744427302),\n",
+       " (RegularPoly(11, 3), 1.439239460421746),\n",
+       " (RegularPoly(12, 3), 1.4488887394336025),\n",
+       " (RegularPoly(13, 3), 1.456412726139078),\n",
+       " (RegularPoly(14, 3), 1.4623918682727355),\n",
+       " (RegularPoly(15, 3), 1.4672214011007085),\n",
+       " (RegularPoly(16, 3), 1.4711779206048456),\n",
+       " (RegularPoly(17, 3), 1.4744596495258526),\n",
+       " (RegularPoly(18, 3), 1.477211629518312),\n",
+       " (RegularPoly(19, 3), 1.4795419551040836),\n",
+       " (RegularPoly(20, 3), 1.4815325108927067),\n",
+       " (RegularPoly(21, 3), 1.4832462393376928),\n",
+       " (RegularPoly(22, 3), 1.484732162821399),\n",
+       " (RegularPoly(23, 3), 1.4860289190544962),\n",
+       " (RegularPoly(24, 3), 1.4871672920607155),\n",
+       " (RegularPoly(25, 3), 1.4881720519717168)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(poly_25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### functions as a sequence type (\\_\\_getitem__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(RegularPoly(4, 3), 1.0606601717798214)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_25.__getitem__(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### supports the len() function (\\_\\_len__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_25.__len__()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### proper representation (\\_\\_repr__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'RegularPolySeq(25, 3)'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_25.__repr__()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Proper string representation (\\_\\_str__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polygon sequence with seq_len = 23 and common cirum_radius = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(poly_25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### max efficiency polygon: returns the Polygon with the highest area: perimeter ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RegularPoly(25, 3)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_25.max_efficiency_poly"
    ]
   },
   {
