Commit for session 13 - 3

--- a/session13.ipynb
+++ b/session13.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numbers\n",
+    "# import the modules \n",
     "import regular_poly as rp\n",
     "import regular_poly_seq as ps"
    ]
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -321,13 +321,13 @@
        " (RegularPoly(25, 3), 1.4881720519717168)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(poly_25)"
+    "list(poly_25) # Polygon object and area to perimeter ratio"
    ]
   },
   {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "(RegularPoly(4, 3), 1.0606601717798214)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "23"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "'RegularPolySeq(25, 3)'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "RegularPoly(25, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
